@@ -1,0 +1,41 @@
+Module 47 1 367 25 0 0
+ColorP 0 0 1 3 250 200 50 180 180 180
+ColorP 1 2 1 4 250 200 50 180 180 180
+ColorP 3 2 1 5 250 200 50 180 180 180
+FSlider 1 0 -1638 0 -16384 16384 1
+ISlider 1 0 12 1
+ComboBox 1 0 2 1
+Module 7 2 587 55 0 0
+ColorP 0 0 2 1 250 200 50 180 180 180
+ColorP 1 0 2 6 250 200 50 180 180 180
+FSlider 2 0 8192 0 0 16384 1
+FSlider 2 1 8192 0 0 16384 1
+FSlider 2 2 8192 0 0 16384 1
+ComboBox 2 0 0 1
+Module 17 3 62 25 0 0
+FSlider 3 0 8192 0 0 16384 1
+FSlider 3 1 8192 0 0 16384 1
+FSlider 3 2 8192 0 0 16384 1
+Module 3 4 20 121 0 0
+FSlider 4 0 26369 1 -150902 75451 1
+FSlider 4 1 0 0 0 16384 1
+FSlider 4 2 0 0 0 102940 1
+Module 3 5 50 314 0 0
+FSlider 5 0 33791 1 -150902 75451 1
+FSlider 5 1 30720 0 0 16384 1
+FSlider 5 2 0 0 0 102940 1
+Module 47 6 372 166 0 0
+ColorP 0 0 6 3 250 200 50 180 180 180
+ColorP 1 2 6 4 250 200 50 180 180 180
+ColorP 3 2 6 7 250 200 50 180 180 180
+FSlider 6 0 -1638 0 -16384 16384 1
+ISlider 6 0 12 1
+ComboBox 6 0 2 1
+Module 3 7 232 324 0 0
+FSlider 7 0 21293 1 -150902 75451 1
+FSlider 7 1 0 0 0 16384 1
+FSlider 7 2 0 0 0 102940 1
+Comment 0 0 465 301 200 170
+#PARA# 0 0 0
+One analog memory is read out at faster-than-normal speed; the other is read out slower-than-normal.  Listen on headphones!
+#ARAP#
