@@ -1,0 +1,45 @@
+Module 7 1 538 210 0 0
+ColorP 0 0 1 3 250 200 50 180 180 180
+ColorP 1 0 1 3 250 200 50 180 180 180
+FSlider 1 0 8192 0 0 16384 1
+FSlider 1 1 8192 0 0 16384 1
+FSlider 1 2 8192 0 0 16384 1
+ComboBox 1 0 0 1
+Module 1 2 104 40 0 0
+FSlider 2 0 0 0 0 16384 1
+FSlider 2 1 8192 0 1638 14745 1
+FSlider 2 2 0 0 0 16384 1
+FSlider 2 3 0 0 0 102940 1
+FSlider 2 4 0 0 0 163840 1
+FSlider 2 5 0 0 0 163840 1
+ISlider 2 0 3 1
+ISlider 2 1 1 1
+ISlider 2 2 1 1
+ComboBox 2 0 0 1
+Module 48 3 332 120 0 0
+ColorP 0 0 3 2 250 200 50 180 180 180
+ColorP 1 0 3 5 250 200 50 180 180 180
+ColorP 2 0 3 6 250 200 50 180 180 180
+FSlider 3 0 7840 0 0 16384 1
+FSlider 3 1 7740 0 -16384 16384 1
+FSlider 3 2 393216 0 16384 393216 1
+FSlider 3 3 16384 0 -16384 16384 1
+Module 24 4 498 103 0 0
+ColorP 0 0 4 3 250 200 50 180 180 180
+FSlider 4 0 598309 0 163840 16384000 1
+FSlider 4 1 55223 0 1638 163840 1
+FSlider 4 2 0 0 -16384 16384 1
+ComboBox 4 0 1 1
+ComboBox 4 1 0 1
+Module 3 5 57 217 0 0
+FSlider 5 0 -18978 1 -150902 75451 1
+FSlider 5 1 0 0 0 16384 1
+FSlider 5 2 0 0 0 102940 1
+Module 3 6 195 329 0 0
+FSlider 6 0 18516 1 -150902 75451 1
+FSlider 6 1 0 0 0 16384 1
+FSlider 6 2 0 0 0 102940 1
+Comment 0 0 342 304 200 170
+#PARA# 0 0 0
+This is what happens to a simple sine wave when it is undersampled in time (rate) or in bits.
+#ARAP#
